# GW2-ArcdpsMock

./: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
GW2-ArcdpsMock-Common/: CMakeLists.txt  MockedTypes.h  SharedTypes.h
GW2-ArcdpsMock-Console/: ArcDpsExports.cpp  ArcdpsExports.cpp  CMakeLists.txt  LibrariesManager.cpp  LibrariesManager.h  Library.h  MockedTypes.cpp  MockedTypes.h  SharedTypes.h  arcdps_structs.h  main.cpp
GW2-ArcdpsMock-DemoPlugin/: ArcdpsAPI.cpp  CMakeLists.txt  Dependencies.cpp  Dependencies.h  dllmain.cpp
